Adding datastorage.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <canvas id="game" style="background-color: grey;"></canvas>
 
     <script type="module" src="./view/main.js"></script>
-    <script src="./data/db.js"></script>
+    <script type="module" src="./data/datastorage.js"></script>
 </body>
 </html>
